--- a/_config.yml
+++ b/_config.yml
@@ -43,9 +43,19 @@ disqus_shortname: #gaohaoyang
 #   var s = document.getElementsByTagName("script")[0]; 
 #   s.parentNode.insertBefore(hm, s);
 # })();
-</script>
+# <!-- Global site tag (gtag.js) - Google Analytics -->
+# <script async src="https://www.googletagmanager.com/gtag/js?id=UA-142772101-1"></script>
+# <script>
+#   window.dataLayer = window.dataLayer || [];
+#   function gtag(){dataLayer.push(arguments);}
+#   gtag('js', new Date());
+
+#   gtag('config', 'UA-142772101-1');
+# </script>
+
+# </script>
 baidu_tongji_id: 7ac1f0ec9bc4564ce39137088578ada8
-google_analytics_id: UA-72449510-4 # google 分析追踪id
+google_analytics_id: UA-142772101-1 # google 分析追踪id
 
 # Build settings
 markdown: kramdown
